packages/cargo_tools_vscode_macros/tests/ui/wasm_async_trait_struct.stderr
error: wasm_async_trait can only be applied to trait definitions or trait implementations
 --> tests/ui/wasm_async_trait_struct.rs:5:1
  |
5 | struct InvalidStruct;
  | ^^^^^^^^^^^^^^^^^^^^^
